[FIX] Fixed spacing between header and content.

--- a/lumify.app/app/(auth)/Auth/Auth.module.css
+++ b/lumify.app/app/(auth)/Auth/Auth.module.css
@@ -2,5 +2,6 @@
     display: flex;
     flex-direction: column;
 
+    padding-top: 20px;
     gap: 50px;
 }
